# AHI-Artificial-Human-Intelligence-for-Italian-jobs

./: .gitignore  README.md  build_site_data.py  download_classification.py  make_csv.py  make_prompt.py  parse_detail.py  process.py  professioni.csv  professioni.json  prompt.md  pyproject.toml  score.py  scores.json  scrape.py
site/: data.json  index.html
